fix(CardScroll): revert gap

--- a/packages/vkui/src/components/CardScroll/CardScroll.module.css
+++ b/packages/vkui/src/components/CardScroll/CardScroll.module.css
@@ -1,28 +1,29 @@
 .host {
-  --vkui_internal--CardScroll_horizontal_padding: 0;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
 }
 
 .in {
+  display: flex;
+  align-items: stretch;
   inline-size: 100%;
   margin: 0;
   padding: 0;
   list-style-type: none;
 }
 
-.in::after,
-.in::before {
-  content: '';
-  padding-inline: calc(var(--vkui_internal--CardScroll_horizontal_padding) / 2);
+.gap {
+  display: block;
+  flex-shrink: 0;
 }
 
 .host + .host {
   margin-block-start: 16px;
 }
 
-.withPaddings {
-  --vkui_internal--CardScroll_horizontal_padding: var(
-    --vkui--size_base_padding_horizontal--regular
-  );
+.withPaddings .gap {
+  inline-size: var(--vkui--size_base_padding_horizontal--regular);
 }
 
 /**
@@ -31,15 +32,17 @@
  */
 /* stylelint-disable-next-line selector-pseudo-class-disallowed-list */
 :global(.vkuiInternalSplitCol--viewWidth-tabletPlus):global(.vkuiInternalSplitCol--spaced-auto)
-  .withPaddings {
-  --vkui_internal--CardScroll_horizontal_padding: 16px;
+  .withPaddings
+  .gap {
+  inline-size: 16px;
 }
 
 @media (--viewWidth-smallTabletPlus) {
   /* stylelint-disable-next-line selector-pseudo-class-disallowed-list */
   :global(.vkuiInternalSplitCol--viewWidth-none):global(.vkuiInternalSplitCol--spaced-auto)
-    .withPaddings {
-    --vkui_internal--CardScroll_horizontal_padding: 16px;
+    .withPaddings
+    .gap {
+    inline-size: 16px;
   }
 }
 
